<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PMDDMM_EVAL1_Javier_Rodriguez_Montero</string>
    <string name="txt_splash">¡BIENVENIDO!</string>
    <string name="item1">Reservar</string>
    <string name="item2">Pagina web</string>
    <string name="item3">Mapa</string>
    <string name="txtvTitulo">Formulario de reserva</string>
    <string name="txtvInfo">Rellenar campos:</string>
    <string name="etNombre">Nombre</string>
    <string name="etApellidos">Apellidos</string>
    <string name="etTelefono">Telefono de contacto</string>
    <string name="etEmail">email</string>
    <string name="txtvComentarios">Escribir comentario:</string>
    <string name="etCajaComentarios"></string>
    <string name="buttonReservar">Confirmar reserva</string>
    <string name="vwButton">Salir</string>
</resources>
